## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gtkperf_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

gtkperf_pixmaps_DATA = \
	duck.png

EXTRA_DIST = $(gtkperf_pixmaps_DATA)
