## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(GTK_CFLAGS)

AM_CFLAGS =

bin_PROGRAMS = gtkperf

gtkperf_SOURCES = \
	support.h\
	support.c\
	main.c\
	interface.h\
	interface.c\
	callbacks.h\
	callbacks.c\
	appdata.h\
	tests.c\
	tests.h\
	timing.c\
	timing.h

gtkperf_LDFLAGS = 

gtkperf_LDADD =  \
	$(GTK_LIBS)

